win_yamls/demo_yamls/server_lin.yml
apiVersion: v1
kind: Pod
metadata:
  name: server-lin
  namespace: default
  labels:
    app: server
spec:
  nodeName: a-ms-0006-1
  containers:
  - image: "projects.registry.vmware.com/antrea/agnhost:2.26"
    args:
      - netexec
      - --http-port=80
      - --udp-port=80
    imagePullPolicy: IfNotPresent
    name: netexec
  restartPolicy: Always
