win_yamls/demo_yamls/server_win.yml
apiVersion: v1
kind: Pod
metadata:
  name: server-win
  namespace: default
  labels:
    app: server
spec:
  nodeName: a-ms-0006-win-0
  containers:
  - image: "harbor-repo.vmware.com/dockerhub-proxy-cache/e2eteam/agnhost:2.20"
    args: ["netexec", "--http-port=80","--udp-port=81"]
    ports:
    - containerPort: 80
      name: http
    - containerPort: 81
      name: udp
    imagePullPolicy: IfNotPresent
    name: server
  restartPolicy: Always
