win_yamls/demo_yamls/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: demo-networkpolicy
  namespace: default
spec:
  ingress:
  - ports:
    - port: 80
      protocol: TCP
    from:
    - podSelector:
        matchLabels:
          app: client-1
  podSelector:
    matchLabels:
      app: server
  policyTypes:
  - Ingress
